# invenio-stats-persistent

./: .editorconfig  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  babel.ini  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_stats_persistent/: __init__.py  config.py  ext.py  proxies.py
invenio_stats_persistent/templates/invenio_stats_tugraz/: base.html  index.html
invenio_stats_tugraz/: __init__.py  config.py  ext.py  proxies.py  tasks.py  utils.py  views.py
invenio_stats_tugraz/records/: __init__.py  api.py  schema.py
invenio_stats_tugraz/records/dumpers/: __init__.py  statistics.py
invenio_stats_tugraz/records/statistics/: __init__.py  api.py
invenio_stats_tugraz/records/statistics/templates/: __init__.py
invenio_stats_tugraz/records/statistics/templates/aggregations/: __init__.py
invenio_stats_tugraz/records/statistics/templates/aggregations/aggr_marc21_file_download/: __init__.py
invenio_stats_tugraz/records/statistics/templates/aggregations/aggr_marc21_file_download/os-v2/: __init__.py
invenio_stats_tugraz/records/statistics/templates/aggregations/aggr_marc21_record_view/: __init__.py
invenio_stats_tugraz/records/statistics/templates/aggregations/aggr_marc21_record_view/os-v2/: __init__.py
invenio_stats_tugraz/records/statistics/templates/events/: __init__.py
invenio_stats_tugraz/records/statistics/templates/events/marc21_file_download/os-v2/: __init__.py
invenio_stats_tugraz/records/statistics/templates/events/marc21_record_view/: __init__.py
invenio_stats_tugraz/records/statistics/templates/events/marc21_record_view/os-v2/: __init__.py
invenio_stats_tugraz/records/systemfields/: __init__.py  statistics.py
invenio_stats_tugraz/templates/invenio_stats_tugraz/landing_page/: statistics.html
invenio_stats_tugraz/templates/invenio_stats_tugraz/landing_page/macros/: stats_popup.html
tests/: conftest.py  test_invenio_stats_persistent.py  test_invenio_stats_tugraz.py
