# -*- coding: utf-8 -*-
#
# Copyright (C) 2024 Graz University of Technology.
#
# invenio-stats-persistent is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = invenio-stats-persistent
version = attr: invenio_stats_persistent.__version__
description = "Invenio module for collecting statistics for TU Graz."
long_description = file: README.rst, CHANGES.rst
keywords = invenio TODO
license = MIT
author = Graz University of Technology
author_email =
platforms = any
url = https://github.com/tu-graz-library/invenio-stats-persistent
classifiers =
Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    invenio-base>=1.2.5
    invenio-i18n>=1.3.1
    invenio-rdm-records>=4.0.0
    invenio-stats>=2.0.0

[options.extras_require]
tests =
    invenio-app>=1.3.4,<2.0.0
    pytest-invenio>=2.1.0, <3.0.0
    pytest-black>=0.3.0
    sphinx>=4.5.0
    invenio-search[opensearch2]>=2.1.0, <3.0.0

[options.entry_points]
invenio_base.apps =
    invenio_stats_persistent = invenio_stats_persistent:InvenioStatsPersistent


[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_stats_persistent --cov-report=term-missing
testpaths = docs tests invenio_stats_persistent
